apps/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gitops-canary-app
  namespace: prod
spec:
  replicas: 3
  strategy:
    canary:
      canaryService: gitops-canary-app-canary
      stableService: gitops-canary-app-stable
      trafficRouting:
        nginx:
          stableIngress: gitops-canary-app
      steps:
        - setWeight: 5
        - pause:
            duration: 45s
        - analysis:
            templates:
              - templateName: success-rate
            args:
              - name: canaryHash
                valueFrom:
                  podTemplateHashValue: Latest
        - setWeight: 25
        - pause:
            duration: 45s
        - analysis:
            templates:
              - templateName: success-rate
            args:
              - name: canaryHash
                valueFrom:
                  podTemplateHashValue: Latest
        - setWeight: 50
        - pause:
            duration: 45s
        - setWeight: 100
  selector:
    matchLabels:
      app: gitops-canary-app
  template:
    metadata:
      labels:
        app: gitops-canary-app
    spec:
      containers:
        - name: app
          image: ghcr.io/hiba-farah/gitops-canary-app:f46854e
          ports:
            - containerPort: 8000
