apps/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-canary-app-stable
  namespace: prod
spec:
  selector:
    app: gitops-canary-app
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-canary-app-canary
  namespace: prod
spec:
  selector:
    app: gitops-canary-app
  ports:
    - port: 80
      targetPort: 8000
